# D2D

./: .env  .gitignore  README.md  app.py  demo.py  generate_sample_data.py  package-lock.json  package.json  predictions.csv  pyproject.toml  requirements.txt
config/: settings.py
d2d/: __init__.py  predict.py  train.py
d2d/config/: default.yaml
d2d/evaluation/: __init__.py
d2d/inference/: __init__.py
d2d/training/: __init__.py
d2d/utils/: __init__.py
docs/: README.md
services/: gemini_services.py  yolo_services.py
src/: App.css  App.jsx  D2D.jsx  DrawToDevelopment.css
tests/: conftest.py  test_data.py  test_models.py
utils/: json_formatter.py
